UtahLiveDataTest/src/objects/UserRegistration__c.object
<CustomObject>
    <fields>
        <fullName>PrimaryPOCSuffix__c</fullName>
        <label>Suffix (Obsolete)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jr.</fullName>
                </value>
                <value>
                    <fullName>Sr.</fullName>
                </value>
                <value>
                    <fullName>I.</fullName>
                </value>
                <value>
                    <fullName>II.</fullName>
                </value>
                <value>
                    <fullName>III.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrimaryPOCTitle__c</fullName>
        <inlineHelpText>Job Title held in the Organization</inlineHelpText>
        <label>Title (Obsolete)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryRepAddress1__c</fullName>
        <inlineHelpText>Applicant&apos;s Address</inlineHelpText>
        <label>Primary Rep Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryRepAddress2__c</fullName>
        <label>Primary Rep Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryRepCity__c</fullName>
        <label>Primary Rep City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryRepCountry__c</fullName>
        <defaultValue>&apos;USA&apos;</defaultValue>
        <description>Country name</description>
        <label>Primary Rep Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryRepEmail__c</fullName>
        <inlineHelpText>Enter Point of Contact’s E-mail address. For example xyz@abc.com</inlineHelpText>
        <label>Primary Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PrimaryRepFirstName__c</fullName>
        <label>Primary Rep First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryRepLastName__c</fullName>
        <label>Primary Rep Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryRepPhone__c</fullName>
        <inlineHelpText>Point of Contact’s Official Phone number. Format is XXX-XXX-XXXX.</inlineHelpText>
        <label>Primary Rep Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PrimaryRepPrefix__c</fullName>
        <label>Primary Rep Prefix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrimaryRepSponsoringAgency__c</fullName>
        <label>Primary Rep Sponsoring Agency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CCJJ</fullName>
                </value>
                <value>
                    <fullName>UOVC</fullName>
                </value>
                <value>
                    <fullName>USBE</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrimaryRepState__c</fullName>
        <label>Primary Rep State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrimaryRepTitle__c</fullName>
        <label>Primary Rep Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryRepZipCode__c</fullName>
        <inlineHelpText>Format for zip code xxxxx-xxxx</inlineHelpText>
        <label>Primary Rep Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMESponsoringAgency__c</fullName>
        <label>Sponsoring Agency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CCJJ</fullName>
                </value>
                <value>
                    <fullName>UOVC</fullName>
                </value>
                <value>
                    <fullName>USBE</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sams__c</fullName>
        <description>This is field added for the SAMS number for organizations or individuals</description>
        <inlineHelpText>A System for Award Management Number(SAM) is a unique number registered to do business with the U.S government.</inlineHelpText>
        <label>Sams Registration Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondaryAreaOfExpertisePicklist__c</fullName>
        <description>Secondary Area Of Expertise picklist</description>
        <inlineHelpText>Select secondary area of expertise.</inlineHelpText>
        <label>Secondary Area Of Expertise</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Law Enforcement</fullName>
                </value>
                <value>
                    <fullName>Prosecution</fullName>
                </value>
                <value>
                    <fullName>Shelter</fullName>
                </value>
                <value>
                    <fullName>Legal Services</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Courts</fullName>
                </value>
                <value>
                    <fullName>Ambulatory Care Programs</fullName>
                </value>
                <value>
                    <fullName>Primary Care</fullName>
                </value>
                <value>
                    <fullName>School-based Health Care</fullName>
                </value>
                <value>
                    <fullName>Capacity-building Initiatives</fullName>
                </value>
                <value>
                    <fullName>Capital Health (Construction) Projects</fullName>
                </value>
                <value>
                    <fullName>Children with Special Health Care Needs</fullName>
                </value>
                <value>
                    <fullName>Chronic Disease</fullName>
                </value>
                <value>
                    <fullName>Cancer Prevention and Treatment</fullName>
                </value>
                <value>
                    <fullName>Maternal and Child Health Services</fullName>
                </value>
                <value>
                    <fullName>Preventive Health Services</fullName>
                </value>
                <value>
                    <fullName>Breastfeeding</fullName>
                </value>
                <value>
                    <fullName>Home Visitation</fullName>
                </value>
                <value>
                    <fullName>HIV Prevention Services (by risk/population):</fullName>
                </value>
                <value>
                    <fullName>Adolescents/Young Adults</fullName>
                </value>
                <value>
                    <fullName>MSM</fullName>
                </value>
                <value>
                    <fullName>Hetrosexual women and men</fullName>
                </value>
                <value>
                    <fullName>Older Adults</fullName>
                </value>
                <value>
                    <fullName>Injection Drug Users</fullName>
                </value>
                <value>
                    <fullName>Transgendered Persons</fullName>
                </value>
                <value>
                    <fullName>HIV Care,Treatment and Support Services</fullName>
                </value>
                <value>
                    <fullName>Ambulatory Outpatient Medical Care</fullName>
                </value>
                <value>
                    <fullName>Oral Health</fullName>
                </value>
                <value>
                    <fullName>Medical Case Management</fullName>
                </value>
                <value>
                    <fullName>Treatment Adherence Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SecondaryAreaOfExpertise__c</fullName>
        <inlineHelpText>Describe here the secondary area of expertise selected.</inlineHelpText>
        <label>Secondary Area Of Expertise</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SecondaryRepAddress1__c</fullName>
        <inlineHelpText>Applicant&apos;s Address</inlineHelpText>
        <label>Secondary Rep Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondaryRepAddress2__c</fullName>
        <label>Secondary Rep Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondaryRepCity__c</fullName>
        <label>Secondary Rep City</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondaryRepCountry__c</fullName>
        <defaultValue>&apos;USA&apos;</defaultValue>
        <description>Country Name</description>
        <label>Secondary Rep Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondaryRepEmail__c</fullName>
        <inlineHelpText>Enter Point of Contact’s E-mail address. For example xyz@abc.com</inlineHelpText>
        <label>Secondary Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SecondaryRepFirstName__c</fullName>
        <label>Secondary Rep First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondaryRepLastName__c</fullName>
        <label>Secondary Rep Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondaryRepPhone__c</fullName>
        <inlineHelpText>Point of Contact’s Official Phone number. Format is XXX-XXX-XXXX .</inlineHelpText>
        <label>Secondary Rep Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SecondaryRepPrefix__c</fullName>
        <label>Secondary Rep Prefix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SecondaryRepSponsoringAgency__c</fullName>
        <label>Secondary Rep Sponsoring Agency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CCJJ</fullName>
                </value>
                <value>
                    <fullName>UOVC</fullName>
                </value>
                <value>
                    <fullName>USBE</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SecondaryRepState__c</fullName>
        <label>Secondary Rep State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SecondaryRepTitle__c</fullName>
        <label>Secondary Rep Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondaryRepZipCode__c</fullName>
        <inlineHelpText>Format for zip code XXXXX or XXXXX - XXXX</inlineHelpText>
        <label>Secondary Rep Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SecondaryRepresentativeRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to ask if Secondary Representative is required or not?</description>
        <inlineHelpText>Select the checkbox if Secondary Representative is Required?</inlineHelpText>
        <label>Secondary Representative Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SponsoringAgency__c</fullName>
        <label>Sponsoring Agency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CCJJ</fullName>
                </value>
                <value>
                    <fullName>UOVC</fullName>
                </value>
                <value>
                    <fullName>USBE</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StateDropdownList__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StateDropdown__c</fullName>
        <label>State (Obsolete)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AK Alaska</fullName>
                </value>
                <value>
                    <fullName>AL Alabama</fullName>
                </value>
                <value>
                    <fullName>AR Arkansas</fullName>
                </value>
                <value>
                    <fullName>AZ Arizona</fullName>
                </value>
                <value>
                    <fullName>CA California</fullName>
                </value>
                <value>
                    <fullName>CO Colorado</fullName>
                </value>
                <value>
                    <fullName>CT Connecticut</fullName>
                </value>
                <value>
                    <fullName>DC District of Columbia</fullName>
                </value>
                <value>
                    <fullName>DE Delaware</fullName>
                </value>
                <value>
                    <fullName>FL Florida</fullName>
                </value>
                <value>
                    <fullName>GA Georgia</fullName>
                </value>
                <value>
                    <fullName>HI Hawaii</fullName>
                </value>
                <value>
                    <fullName>IA Iowa</fullName>
                </value>
                <value>
                    <fullName>ID Idaho</fullName>
                </value>
                <value>
                    <fullName>IL Illinois</fullName>
                </value>
                <value>
                    <fullName>IN Indiana</fullName>
                </value>
                <value>
                    <fullName>KS Kansas</fullName>
                </value>
                <value>
                    <fullName>KY Kentucky</fullName>
                </value>
                <value>
                    <fullName>LA Louisiana</fullName>
                </value>
                <value>
                    <fullName>MA Massachusetts</fullName>
                </value>
                <value>
                    <fullName>MD Maryland</fullName>
                </value>
                <value>
                    <fullName>ME Maine</fullName>
                </value>
                <value>
                    <fullName>MI Michigan</fullName>
                </value>
                <value>
                    <fullName>MN Minnesota</fullName>
                </value>
                <value>
                    <fullName>MO Missouri</fullName>
                </value>
                <value>
                    <fullName>MS Mississippi</fullName>
                </value>
                <value>
                    <fullName>MT Montana</fullName>
                </value>
                <value>
                    <fullName>NC North Carolina</fullName>
                </value>
                <value>
                    <fullName>ND North Dakota</fullName>
                </value>
                <value>
                    <fullName>NE Nebraska</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StateForApplicant__c</fullName>
        <label>State (Obsolete)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>Mailing State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Review In Progress</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Mailing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskCreationFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TaskCreationFlag</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>